Added updated html file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
         <title>Excursion</title>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
-<body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+<p>
+    <h1 class="header--main">Discover hidden places in the world around you</h1>
+    <p><a class="link--cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <div>
+        <video autoplay loop muted>
+            <source src="resources/videos/excursion.mp4" type="video/mp4"/>
+        </video>
+    </div>
+    <h2 class="header--secondary">Your personal travel guide</h2>
+    <h3 class="header--subheader">Excursion remembers places you like, and recommends
+         new points of interest around you.</h3>
+    <p>
+        <img id="camp" src="resources/images/landscape.png" alt="camp-picture"/>
+    </p>
+    <p>
+        <img id="cellphone" src="resources/images/phone.png" alt="cellphone-icon"/>
+    </p>
+    
+    <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
+    <p class="header--subheader"><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p id="copyright"> &copy; Excursion</p>
 </body>
 
 </html>
